--- a/AlphabetSoupChallenge.ipynb
+++ b/AlphabetSoupChallenge.ipynb
@@ -1157,11 +1157,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Optimization Results\n",
-    "# * Eliminated 2 more columns Status and Special_Considerations: Loss 0.5340 Acc: 0.7401\n",
-    "# Added CLASSIFICATION to columns eliminated: Loss 0.5611 Acc: 0.7308        "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1176,11 +1172,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do your best to optimize your model training and input data to achieve a\n",
-    "# target predictive accuracy higher than 75%.\n",
-    "#   Look at Page 19.2.6 for ideas on how to optimize and boost model performance.\n",
-    "#   Note: You will not be penalized if your model does not achieve target performance,\n",
-    "#   as long as you demonstrate an attempt at model optimization within your notebook."
+    "# Target Accuracy of >75%. \n",
+    "#   Using ideas from module 19, a duplicate Learning Model block of code was setup to act as a playground.\n",
+    "# Different parameters were then adjusted as follows: \n",
+    "\n",
+    "# Input dataset. - eliminated the Status and Special_Consideration columns which were binary in nature and very\n",
+    "# imbalanced with 99.9% of data in a single state out of two states. \n",
+    "# Slight improvement in Loss from 0.5611 to 0.5340 and Accuracy 0.7308 to 0.7401.\n",
+    "\n",
+    "# Add more neurons to a hidden layer - doubled Layer 1 from 24 to 48 and Layer 2 from 12 - 24. \n",
+    "# Results got slightly better by a few hundreds lower on loss and a few tenths of a percent on Accuracy.\n",
+    "\n",
+    "# Add additional hidden layers.\n",
+    "\n",
+    "# Use a different activation function for the hidden layers - tried Tanh replacing Relu and tried using Relu \n",
+    "# in place of Sigmoid. No significant improvements in loss or output accuracy.\n",
+    "\n",
+    "# Add additional epochs to the training regimen - increased from 50 to 300. \n",
+    "# Results got worse by a few tenths of a percent.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Optimization Results\n",
+    "# * Eliminated 2 more columns Status and Special_Considerations: Loss 0.5340 Acc: 0.7401\n",
+    "# Added CLASSIFICATION to columns eliminated: Loss 0.5611 Acc: 0.7308        "
    ]
   },
   {
@@ -1251,40 +1271,6 @@
     "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a new README.txt file within the same folder as your AlphabetSoupChallenge.ipynb notebook.\n",
-    "# Include a 5–10 sentence writeup in your README that addresses the following questions:\n",
-    "#   How many neurons and layers did you select for your neural network model? Why?\n",
-    "#   Were you able to achieve the target model performance? What steps did you take to try and\n",
-    "#   increase model performance?\n",
-    "#   If you were to implement a different model to solve this classification problem, which would you choose? Random Forest. Why?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Make sure your repo is up to date and includes the following:\n",
-    "\n",
-    "#     An AlphabetSoupChallenge.ipynb file containing all of your model building code\n",
-    "#     A README.txt file containing your writeup\n",
-    "#     Submit a link to your repository through Canvas."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
